<resources>
    <string name="app_name">MIM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MIM</string>
    <string name="nav_header_subtitle">Location de véhicules</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>
    <string name="contrat_location_form">Contrat de Location</string>
    <string name="etatdeslieux_form">Etat des Lieux</string>

    <!-- partie vehicules -->
    <string name="acc_search_label">Rechercher un véhicule</string>
    <string name="hint_v_numserie">Numéro de Série</string>
    <string name="hint_v_marque">Marque</string>
    <string name="hint_v_immat">Immatriculation</string>
    <string name="v_btn_save">Enregistrer</string>
    <string name="v_empty_not_save">Le véhicule n\'est pas sauvegardé car il est vide.</string>
</resources>
